# xtracer

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.markdown  CMakeLists.txt  LICENSE  Makefile.common.in  Makefile.in  Makefile.test.in  Makefile.xtcore.in  Makefile.xtfcli.in  Makefile.xtfgui.in  PENDING  README  README.markdown  README.md  VERSION  bash_completion  configure  incver.sh  profile  test.sh
.github/: FUNDING.yml
.github/workflows/: ci.yaml  ci.yml  main.yml
automation/: Makefile
automation/git-hooks/: commit-msg  test.txt
doc/: Makefile  thesis.tex
doc/Abstract/: abstract.tex
doc/Appendix1/: appendix1.tex
doc/Appendix2/: appendix2.tex
doc/Introduction/: introduction.tex
doc/abstract/: abstract.tex
doc/acknowledgement/: acknowledgement.tex
doc/appendix1/: appendix1.tex
doc/appendix2/: appendix2.tex
doc/appendix3/: appendix3.tex
doc/chapter1/: chapter1.tex
doc/chapter2/: chapter2.tex
doc/chapter3/: chapter3.tex
doc/chapter4/: chapter4.tex
doc/classes/: thesis.cls
doc/conclusions/: conclusions.tex
doc/dedication/: dedication.tex
doc/fig/: fig2ps.sh  unipi.eps
doc/introduction/: introduction.tex
doc/man/: xtracer.1
doc/references/: references.bib
ext/imgui/: imgui_impl_glfw_gl3.cpp
ext/nanosvg/: nanosvgrast.h
ext/stb/: stb_image.h
ext/strpool/: strpool.h
ext/tinyfiles/: tinyfiles.h  tinyfiles.oldh
ide/: prepd.bat
ide/vs2010/: xtracer.sln  xtracer.vcxproj  xtracer.vcxproj.filters  xtracer_sdl.vcxproj  xtracer_sdl.vcxproj.filters
lib/ncf/: expreval.cc  ncf.cc  util.cc  util.h
lib/nimg/: buffer.h  buffer.tml  coldef.h  color.cc  color.h  color.inl  conversion.c  conversion.h  desaturate.cc  desaturate.h  diff.cc  diff.h  genetic.cc  img.cc  img.h  luminance.cc  luminance.h  pixel.inl  pixmap.cc  ppm.cc  ppm.h  rasteriser.cc  sample.cc  solidcol.h  transform.cc  transform.h  xor.h  yuv4mpeg2.c  yuv4mpeg2.h
lib/nmath/: geometry.cc  geometry.h  interpolation.h  interpolation.inl  intinfo.cc  intinfo.h  matrix.cc  matrix.h  matrix.inl  mutil.h  mutil.inl  plane.cc  precision.h  prime.h  prime.inl  prng.h  prng.inl  quadratic.cc  quadratic.h  ray.h  sample.h  sample.inl  sphere.cc  sphere.h  triangle.cc  triangle.h  types.h  vector.cc  vector.h  vector.inl
lib/nmesh/: buffer.tml  cone.cc  cone.h  icosahedron.cc  icosahedron.h  invnormals.cc  mesh.cc  mesh.h  obj.cc  obj.h  plane.cc  plane.h  structs.h  tessellate.h  transform.cc  transform.h  vertex.h
lib/nplatform/: byteorder.c  fs.c  fs.h  timer.cc
lib/nsps/: octree.tml
libs/ncf/: declspec.h  expreval.h  ncf.cc  ncf.h  util.cc  util.h
libs/nimg/: buffer.h  buffer.tml  checkerboard.cc  checkerboard.h  color.cc  color.cpp  color.inl  diff.cc  diff.h  genetic.cc  genetic.h  genetic_algo.cc  image.h  img.cc  img.h  luminance.cpp  luminance.hpp  pixel.h  pixmap.cc  pixmap.h  ppm.cc  rasteriser.cc  rasteriser.h  sample.cc  sample.h  solidcol.cc  solidcol.h  xor.cc  xor.cpp  xor.hpp
libs/nmath/: aabb.h  geometry.h  intinfo.h  mutil.h  octree.hpp  octree.tml  plane.h  plane.inl  ray.inl  sphere.cc  sphere.h  sphere.inl  triangle.cc  triangle.h  types.h  vector.inl
libs/nmesh/: buffer.h  calcnormals.cpp  calcnormals.hpp  icosahedron.cc  icosahedron.h  invnormals.h  mesh.cc  mesh.h  nmesh.cpp  obj.cc  obj.cpp  obj.h  obj.hpp  structs.h  tessellate.cc  transform.cc  transform.cpp  transform.h  vertex.h
libs/nplatform/: byteorder.h  byteorder.inl  dlloader.c  dlloader.h
libs/nsps/: octree.h
man/: xtracer.1
scene/: 0.1-empty.scn  0.1.scn  1.1-reflective_sphere.scn  1.1.scn  1.2-reflective_icosahedron.scn  1.2-reflective_plane.scn  1.2.scn  1.3.scn  2.0.scn  2.1.0.scn  2.1.1.scn  2.1.scn  2.2.scn  2.3-hairball.scn  2.3.scn  3.0.scn  3.1.scn  3.2.scn  3.4.scn  3.5.1.scn  3.5.2.scn  3.5.3.scn  4.0.scn  4.1.scn  4.2.scn  4.3.scn  4.4.scn  5.1.scn  5.2.scn  5.3.scn  5.4.scn  5.5.scn  5.6.scn  6.1-stereographic_projection.scn  6.1.scn  6.2.scn  6.3.scn  6.4.scn  7.0.scn  7.1.scn  (+91 more)
scene/basic/: scene_1.1.1.scn  scene_1.2.1.scn  scene_1.2.2.scn  scene_2.1.2.scn  scene_2.2.1.scn  scene_2.2.2.scn  scene_2.3.1.scn  scene_3.1.1.scn  scene_4.2.1.scn  scene_5.3.2.scn  scene_common.scn
scene/material/: basic.mat  mat01.mat  mat02.mat  porcelain.mat
scenes/: ball.scene  basic.mat  cornell.scene  corridor.scene  corridor.scn  include.scene  out  room.scene  room_phong.scn  room_plain.scene  sample.scene  sphere.scene  sphere.scn  triball.scene
src/: aabb.cc  argdefs.h  argparse.cpp  argparse.hpp  buffer.hpp  calcnormals.cpp  calcnormals.hpp  camera.cpp  camera.hpp  cfgproto.h  color.cpp  color.hpp  color.inl  compiler.h  console.cpp  console.hpp  defs.h  demo.vsh  dlloader.c  dlloader.cc  dlloader.h  drv.cpp  drv.hpp  drv_ppm.cpp  drv_sdl.cpp  drv_sdl.hpp  drvppm.cpp  drvppm.hpp  drvsdl.cpp  drvsdl.hpp  engine.h  envsetup.h  err.h  explicit.h  fb.cpp  fb.hpp  geometry.cc  geometry.cpp  geometry.h  geometry.hpp  (+101 more)
src/drv/: dum.c  dum.h  sdl.c  sdl.cpp  sdl.h  sdl.hpp
src/ncf/: dllmain.c  ncf1.cpp  ncf1.hpp  util.cc
src/nimg/: checkerboard.cc  color.hpp  color.inl  pixmap.h  ppm.cpp  ppm.hpp
src/nmath/: aabb.cc  aabb.h  aabb.inl  defs.h  geometry.cc  geometry.h  interpolation.h  interpolation.inl  intinfo.cc  intinfo.h  matrix.cc  matrix.h  matrix.inl  mutil.h  mutil.inl  plane.cc  plane.h  plane.inl  precision.h  prime.h  prime.inl  prng.h  prng.inl  ray.cc  ray.h  ray.inl  sample.inl  sphere.cc  sphere.h  sphere.inl  triangle.cc  triangle.h  triangle.inl  types.h  vector.cc  vector.h  vector.inl
src/nmesh/: calcnormals.cpp  flipfaces.cpp  flipfaces.hpp  mesh.cpp  mesh.hpp  obj.hpp  transform.cpp  transform.hpp
src/nparse/: cf1.cpp  cf1.hpp  util.cpp  util.hpp
src/nplatform/: timer.cpp
src/plo_console/: console.cpp  console.h
src/plr_depth/: depth.cc  depth.h
src/plr_photonmapper/: photon_mapper.cc  photon_mapper.cpp  photon_mapper.h  renderer.cc  renderer.h
src/plr_stencil/: renderer.cc
src/temp/: byteorder.inl  geometry.cpp  geometry.hpp  light.cpp  light.hpp  material.cpp  net.c  renderer.hpp  scene.cpp  (+1 more)
util/: mkvideo.sh  ods2anaglyph.sh
(+344 files in other folders)
